fix(security,tests): Jules P0+P1 critical security and test fixes
Jules Code Review - P0 Critical Security:
 Add timeout=5 to subprocess.run in /validate endpoint
   - Prevents DoS via resource exhaustion
   - Handles TimeoutExpired exception
 Install RestrictedPython>=6.0 for exec() sandboxing

Jules Code Review - P1 Test Infrastructure:
 Resolve merge conflict in test_gemini_service.py
 Create tests/__init__.py (Python package marker)
 Add tests/conftest.py with import path configuration
 Add pytest.ini for test discovery

Bug Fixes:
 Fix service imports and dependencies
 Add AutoFixService alias

Status:
- /validate endpoint: WORKING
- Test infrastructure: WORKING
- Test collection: 153 tests discovered
- /fix endpoint: Disabled pending service refactor

Addresses:
- Jules P0: subprocess timeout vulnerability
- Jules P0: RestrictedPython installation
- Jules P1: Broken test suite
- Jules P1: Merge conflicts

Next Steps:
- Refactor service initialization (lazy loading)
- Fix Gemini SDK compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,16 @@ Homepage = "https://github.com/Amitro123/autofix-python-engine"
 where = ["."]
 include = ["autofix*"]
 exclude = ["tests*", "demos*", "examples*"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+]
+
+
