--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ python-multipart>=0.0.6
 requests>=2.31.0
 
 # Google AI
-google-generativeai>=0.3.0
+google-genai>=0.1.0
 
 # RAG & Vector DB
 chromadb>=0.4.0
