fix: Apply GitHub Copilot security review fixes
Comprehensive security improvements based on GitHub Copilot's code review.
All changes tested and verified - 157 tests passing.

### VariableTracker (api/services/variable_tracker.py):
- Add safe_serialize() to prevent memory leaks and unsafe repr() calls
- Add automatic redaction for sensitive variable names (password, secret, token)
- Add configurable caps: max_snapshots=50K, max_changes=10K (eviction policy)
- Add thread safety with optional threading.Lock
- Store serialized strings only (no raw object references)
- Add hash fingerprints for truncated values
- Support environment variable configuration

### PylintAnalyzer (api/services/analyzers/pylint_analyzer.py):
- Add shutil.which() to detect pylint binary at initialization
- Set analyzer.available flag (False if pylint not found)
- Fix score fallback: return None instead of misleading 10.0
- Make timeout configurable (default: 10s)
- Improve error handling for subprocess failures
- Return structured error messages without internal details
- Add comprehensive logging for diagnostics

### Debug Router (api/routers/debug.py):
- Add authentication dependencies to all endpoints
- Sanitize all error responses (no stack traces leaked to clients)
- Fix ExecutionResult field access (dataclass, not dict)
- Remove unsupported mode parameter from execute() call
- Add router-level dependencies (require_debug_enabled, require_debug_api_key)
- Improve error logging with logger.exception()

### Auth Dependencies (api/dependencies.py):
- Add require_debug_enabled() - checks DEBUG_API_ENABLED env var
- Add require_debug_api_key() - validates X-Debug-API-Key header
- Implement fail-safe security (deny if key not configured)
- Add audit logging for all auth attempts
- Add _env_flag_true() helper for flexible boolean parsing

### Tests:
- Fix test_perfect_code to handle None score (realistic for JSON format)
- Update TestDebugAPI with dependency_overrides for auth bypass
- Add 3 ed

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ firebase-credentials.json
 *-firebase-credentials.json
 # Note: Allow package.json, pyproject.toml, etc. - only block Firebase credentials
 firebase-key.json
+launch.json
 
 
 # Logs
